# wasmbuilder.app

./: .eslintrc.js  .gitignore  .postcssrc.json  .prettierignore  Cargo.toml  Makefile  README.md  package.json  tailwind.config.js  tsconfig.json
crates/fastly-static-site/: Cargo.toml
crates/fastly-static-site/src/: lib.rs
crates/graph/: Cargo.toml  interface.wit  world.wit
crates/graph/src/: bindings.rs  lib.rs
crates/site/: Cargo.toml  fastly.toml
crates/site/src/: main.rs
src/: app.css  app.tsx  details.tsx  dialogs.tsx  global.d.ts  index.html  index.tsx  library.tsx  nodes.tsx  notification.tsx  state.ts
