[package]
name = "graph"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.79"
once_cell = "1.19.0"
wasm-compose = "0.200.0"
wasmparser = "0.200.0"
wat = "1.0.83"
wit-component = "0.200.0"
wit-bindgen = { version = "0.18.0", default-features = false, features = ["realloc"] }

[package.metadata.component]

[package.metadata.component.bindings]
implementor = "GraphComponent"

[package.metadata.component.target]
path = "world.wit"
