[package]
name = "graph"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.81"
once_cell = "1.19.0"
wasm-compose = "0.201.0"
wasmparser = "0.201.0"
wat = "1.201.0"
wit-component = "0.201.0"
bitflags = "2.4.2"
wit-bindgen-rt = "0.22.0"

[package.metadata.component]

[package.metadata.component.bindings]
implementor = "GraphComponent"

[package.metadata.component.target]
path = "world.wit"
