[package]
name = "graph"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
once_cell = "1.20.2"
wasm-compose = "0.219.1"
wasmparser = "0.219.1"
wat = "1.219.1"
wit-component = "0.219.0"
bitflags = "2.6.0"
wit-bindgen-rt = "0.34.0"

[package.metadata.component]

[package.metadata.component.bindings]
implementor = "GraphComponent"

[package.metadata.component.target]
path = "world.wit"
